# weather-app-cookies

./: .gitignore  README.md  app.py  pyproject.toml  pytest.ini  pyvenv.cfg  requirements.txt
tests/: conftest.py  test_project.py
weather-app-flask-cookies/: app.py
weather-app-flask-cookies/static/: script.js
weather-app-flask-cookies/templates/: weather.html
weather_app_cookies/: main.py
weather_app_cookies/static/: script.js
weather_app_cookies/templates/: weather.html
weather_app_flask_cookies/: .env.example  app.py  routes.py
weather_app_flask_cookies/static/css/: main.css
weather_app_flask_cookies/templates/: weather.html
